# scraper

node/: package-lock.json  package.json  pyproject.toml  tsconfig.json
node/src/: index.ts
python/: .env.example  README.md  pyproject.toml
python/scraper/: __init__.py
